--- a/front_endProject/_acesso/justificativa_faltas/index.html
+++ b/front_endProject/_acesso/justificativa_faltas/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
     <link href="../acess.css" rel="stylesheet">
-    <title>CADASTRO DE CURSO</title>
+    <title>JUSTIFICATIVA DE FALTAS</title>
     </head>
     
     <body>
         
         <button class="assistencia2">
-            <a href="" onClick="javascript:window.open('http://mapeamentoacademico.ifmt.edu.br/CadastroDeCurso/', 'popup') ;return false">ACESSAR PAGINA</a>
+            <a href="" onClick="javascript:window.open('http://mapeamentoacademico.ifmt.edu.br/JustificativaDeFaltas/', 'popup') ;return false">ACESSAR PAGINA</a>
         </button>
         <button class="assistencia2">
             <a href="../index_desktop.html">VOLTAR</a>
