--- a/front_endProject/_acesso/justificativa_faltas/index.html
+++ b/front_endProject/_acesso/justificativa_faltas/index.html
@@ -17,6 +17,9 @@
         <div class="assistencia">
             <button class="assistencia">
             <a href="" onClick="javascript:window.open('images/diagrama_fluxo.bmp', 'popup') ;return false">VISUALIZAR</a>
+                <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Diagrama de fluxo representando a justificativa de faltas e seu detalhamento.">
+                    JUSTIFICATIVA DE FALTAS
+                </button>
             </button>
             <img class="assistencia" src="images/diagrama_fluxo.bmp">
         </div>
