--- a/front_endProject/_acesso/assistencia_estudantil/index.html
+++ b/front_endProject/_acesso/assistencia_estudantil/index.html
@@ -17,6 +17,9 @@
         <div class="assistencia">
             <button class="assistencia">
             <a href="" onClick="javascript:window.open('images/diagrama_fluxo.bmp', 'popup') ;return false">VISUALIZAR</a>
+                <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Projeção do diagrama de fluxo da assistência estudantil presente com informação detalhadas sobre seu funcionamento.">
+                    ASSISTÊNCIA ESTUDANTIL 
+                </button>
             </button>
             <img class="assistencia" src="images/diagrama_fluxo.bmp">
         </div>
