--- a/front_endProject/_acesso/cadastro_curso/index.html
+++ b/front_endProject/_acesso/cadastro_curso/index.html
@@ -17,6 +17,9 @@
         <div class="assistencia">
             <button class="assistencia">
             <a href="" onClick="javascript:window.open('images/diagrama_fluxo.bmp', 'popup') ;return false">VISUALIZAR</a>
+                <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Projeção do diagrama de fluxo do cadastro de curso e seus detalhamentos de fluxo e funcionamento.">
+                    CADASTRO DE CURSO
+                </button>
             </button>
             <img class="assistencia" src="images/diagrama_fluxo.bmp">
         </div>
