--- a/front_endProject/_acesso/assistencia_estudantil/index.html
+++ b/front_endProject/_acesso/assistencia_estudantil/index.html
@@ -23,5 +23,9 @@
             </button>
             <img class="assistencia" src="images/diagrama_fluxo.bmp">
         </div>
+        <footer>
+            <article><h4>&copy Site Desenvolvido e publicado pela turma de sistemas</h4></article>
+            <time>2019-11-28</time>
+        </footer>
     </body>
 </html>
