--- a/front_endProject/_acesso/index.html
+++ b/front_endProject/_acesso/index.html
@@ -70,6 +70,10 @@
                 
             </div>
         </main>
+        <footer>
+            <article><h4>&copy Site Desenvolvido e publicado pela turma de sistemas</h4></article>
+            <time>2019-11-28</time>
+        </footer>
     </body>
 
 </html>
